--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.15.4",
     "mongoose": "^4.11.7",
-    "react-router-dom": "^4.1.2"
+    "mysql2": "^1.4.2",
+    "react-router-dom": "^4.1.2",
+    "sequelize": "^4.22.6"
   }
 }
