--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "body-parser": "^1.17.2",
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.15.4",
+    "firebase": "^4.6.2",
     "mongoose": "^4.11.7",
-    "mysql2": "^1.4.2",
+    "mysql": "^2.15.0",
+    "mysql2": "^1.5.0",
     "react-router-dom": "^4.1.2",
     "sequelize": "^4.22.6"
   }
