--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "react": "^16.0.0",
+    "react-datepicker": "^0.61.0",
     "react-dom": "^16.0.0",
     "react-scripts": "1.0.14"
   },
