--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^4.11.7",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.0",
+    "react-day-picker": "^7.0.3",
     "react-router-dom": "^4.1.2",
     "sequelize": "^4.22.6"
   }
